tests/compile-fail/suzu_location_list_form.stderr
error: `location` does not accept arguments; use `#[suzu(location)]` as a bare keyword
 --> tests/compile-fail/suzu_location_list_form.rs:7:12
  |
7 |     #[suzu(location(true))]
  |            ^^^^^^^^
